# freecad-manager

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
resources/: resources.qrc
src/: constants.h  main.cpp  mainwindow.cpp  mainwindow.h  types.h
src/helpers/: filesystemchecker.cpp  filesystemchecker.h  iconhelper.h
src/interfaces/: iappimagemanager.h  iconfigsync.h  idownloader.h  itraymanager.h
src/services/: appimagemanager.cpp  appimagemanager.h  configsync.cpp  configsync.h  downloader.cpp  downloader.h  filedownloader.cpp  filedownloader.h  githubreleasesfetcher.cpp  githubreleasesfetcher.h  traymanager.cpp  traymanager.h
src/ui/: appimageselectordialog.cpp  appimageselectordialog.h  releasestablecontroller.cpp  releasestablecontroller.h
src/utils/: architecturedetector.cpp  architecturedetector.h  filesizeformatter.cpp  filesizeformatter.h  githubreleasesparser.cpp  githubreleasesparser.h  versionextractor.cpp  versionextractor.h
translations/: FreeCADLauncher_fr.ts  FreeCADLauncher_ru.ts
